--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             May your 23rd year be filled with love, laughter, and endless joy!
         </p>
         <button class="mt-6 px-6 py-3 bg-pink-500 text-white rounded-full hover:bg-pink-600 transition duration-300 fade-in" style="animation-delay: 1.5s;" onclick="playMusic()">
-            Play "Tere Bina Na Guzara Hai"
+            Play "Our Song"
         </button>
     </div>
     <audio id="backgroundMusic" src="song.mp3" loop></audio>
